# MetaTk

./: .gitignore  AGENTS.md  CMakeLists.txt  Parzek.cpp  Parzek.hpp  README.md  cb-stash.EGK  dslutils.pc.in  main.cpp  metatk.pc.in
.agents/: AGENTS.md
DSLtk/: CMakeLists.txt  DSLtk.hpp
DSLtk/cmake/: DSLtkConfig.cmake.in
DSLtk/examples/: 01-basic-usage.cpp  02-fixed-strings.cpp  03-pattern-simple.cpp  04-pattern-classes.cpp  05-parser-basics.cpp  06-parser-composition.cpp  07-parser-optional-repeat-choice.cpp  08-ast-creation.cpp  09-ast-traversal.cpp  10-rewrite-basics.cpp  11-rewrite-composition.cpp  12-expression-templates.cpp  13-evaluation-flow.cpp  14-small-calculator-dsl.cpp  15-tokenize-parse-integration.cpp  16-diagnostics-errors.cpp  17-compiletime-runtime-tradeoffs.cpp  18-mini-dsl.cpp
DSLtk/manual/: 01-introduction.md  02-installation-and-layout.md
EkippX/: CMakeLists.txt  EkippX-Batteries.hpp  EkippX-CLI.cpp  EkippX-Plugin.hpp  EkippX-PluginAPI.hpp  EkippX.hpp  EkippX.syntax  KlyspecBridge.cpp  KlyspecBridge.hpp  PikoRLBridge.cpp
EkippX/cmake/: EkippXConfig.cmake.in
EkippX/docs/: CMakeLists.txt  Doxyfile.in  build-docs.sh  build.sh  conf.py  conf.py.in  frontpage.md  generate-docs.sh  index.rst  index.rst.in
EkippX/docs/_static/: sktman.js  stkman.css
EkippX/docs/manual/: chapter01-introduction.md  chapter01-introduction.rst  chapter02-installation.md  chapter02-installation.rst  chapter03-quickstart.md  chapter03-quickstart.rst  chapter04-language.md  chapter04-language.rst  chapter05-parsing.md  chapter05-parsing.rst  chapter06-macros.md  chapter06-macros.rst  chapter07-batteries.md  chapter07-batteries.rst  chapter08-plugins.md  chapter08-plugins.rst  chapter09-cli-repl.md  chapter09-cli-repl.rst  chapter10-embedding.md  chapter10-embedding.rst  chapter11-testing.md  chapter11-testing.rst  chapter12-advanced.md  chapter12-advanced.rst  conf.py  index.md  index.rst
EkippX/examples/: 01-basic-emit.eki  02-echo-function.eki  03-upper.eki  04-lower.eki  05-title.eki  06-trim.eki  07-replace.eki  08-join.eki  09-count.eki  10-first-last.eki  11-repeat.eki  12-pad-left.eki  13-pad-right.eki  14-center.eki  15-add.eki  16-abs-min-max-clamp.eki  17-timestamp.eki  18-hash-checksum.eki  19-json.eki  20-csv.eki  21-env.eki  22-config-expander.eki  23-meta-expander.eki  24-random-expander.eki  25-uuid-expander.eki  26-counter.eki  27-define-macro.eki  28-literal-macro.eki  29-arguments.eki  30-if-eq.eki  31-if-contains.eki  32-alias.eki  33-plugin-filesystem.eki  34-plugin-environment.eki  35-plugin-datetime.eki  36-plugin-random.eki  37-plugin-text.eki  38-include-child.eki  39-include-main.eki  40-warning-notice.eki  (+7 more)
EkippX/manifests/: ekippx-api.yaml  ekippx-batteries.yaml  ekippx-cli.yaml  ekippx-native-dsl.yaml  ekippx-plugin-api.yaml
EkippX/plugins/: DateTimePlugin.hpp  EnvironmentPlugin.hpp  FilesystemPlugin.hpp  RandomPlugin.hpp  TextPlugin.hpp
EkippX/tests/: test_ekippx.cpp
Parzek/: CMakeLists.txt  DSLtk.hpp  Parzek.cpp  Parzek.hpp  main.cpp
Parzek/cmake/: ParzekConfig.cmake.in
Parzek/docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  frontpage.md  index.rst.in
Parzek/docs/manual/: 05-peg-operators-and-joining.md  07-code-generation-cli-and-library-api.md  index.md
Parzek/examples/arithmetic/: README.md  arithmetic.pzg
Parzek/examples/channels/: channels.pzg
Parzek/examples/ini/: IniVisitor.hpp  README.md  README_VISITOR.md  ini-Parzek.cpp  sample.txt
Parzek/examples/json-like/: json-like.pzg
Parzek/examples/predicates/: predicates.pzg
Parzek/manual/: 01-introduction.md  04-lexical-rules-and-channels.md
Parzek/tests/: test_parzek.cpp
Parzek/tests/unit/: test_parser.cpp
cmake/: MetaTkConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  frontpage.md  index.rst.in
docs/manual/: index.md
parser-examples/arithmetic/: arithmetic.pzg
parser-examples/channels/: README.md
parser-examples/json-like/: json-like.pzg
parser-manual/: 02-installation-and-build.md  03-grammar-basics.md  07-code-generation-cli-and-library-api.md
parzek-examples/arithmetic/: README.md
parzek-examples/channels/: README.md  channels.pzg
parzek-examples/ini/: README.md  ini-Parzek.hpp  ini.pzg  test_visitor  test_visitor.cpp
parzek-examples/json-like/: README.md  sample.txt
parzek-examples/predicates/: README.md  predicates.pzg
parzek-manual/: 03-grammar-basics.md  06-predicates-meta-variables-and-helpers.md  08-visitors-testing-and-bootstrapping.md
tests/: test_parzek_features.cpp
